--- a/resources/assets/sass/_navbar.scss
+++ b/resources/assets/sass/_navbar.scss
@@ -166,12 +166,16 @@
   }
 }
 
-
-// Navbar themes
 //
+// Navbar themes
 // Styles for switching between navbars with light or dark background.
+//
 
+
+//
 // Dark links against a light background
+//
+
 .navbar-light {
   .navbar-brand,
   .navbar-toggler {
@@ -217,7 +221,10 @@
   }
 }
 
+//
 // White links against a dark background
+//
+
 .navbar-inverse {
   .navbar-brand,
   .navbar-toggler {
@@ -263,8 +270,8 @@
 }
 
 
-// Main Menu Responsive
 //
+// Main Menu Responsive
 //
 
 #main-menu {
