Scroll on library (new System with IScroll)

--- a/resources/assets/admin/sass/_style.scss
+++ b/resources/assets/admin/sass/_style.scss
@@ -125,8 +125,8 @@ main {
 
 #libraries {
   height: 18rem;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  // overflow-y: scroll;
+  // overflow-x: hidden;
 }
 
 
