--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -50,6 +50,7 @@
 body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+  min-height: 100vh;
 }
 
 @import "resources/assets/admin/sass/_style.scss";
