Add orange badges variant

--- a/resources/assets/sass/_badge.scss
+++ b/resources/assets/sass/_badge.scss
@@ -108,3 +108,7 @@ a.badge {
 .badge-green-var {
   @include badge-variant($tfc-green-var);
 }
+
+.badge-orange {
+  @include badge-variant($tfc-orange);
+}
