--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -455,6 +455,8 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  position: absolute;
+  bottom: 0;
 
   > .footer-content {
     align-self: center;
@@ -543,4 +545,8 @@ body {
   background-size: auto;
   background-origin: border-box;
   background-position: left;
+}
+
+body > .container, main {
+  padding-bottom: calc(90px + 32px);
 }
