Fix style and layout of admin login

--- a/resources/assets/sass/_buttons.scss
+++ b/resources/assets/sass/_buttons.scss
@@ -87,6 +87,10 @@ fieldset[disabled] a.btn {
   @include tfc-button-variant($tfc-orange, $tfc-dark-orange);
 }
 
+.btn-gray {
+  @include tfc-button-variant($gray-lightest, $gray-lighter);
+}
+
 
 
 // Remove all backgrounds
