--- a/resources/assets/sass/_customs.scss
+++ b/resources/assets/sass/_customs.scss
@@ -121,3 +121,62 @@
     }
   }
 }
+
+.badge-red {
+  @include badge-variant($tfc-red);
+}
+
+.badge-dark-red {
+  @include badge-variant($tfc-dark-red);
+}
+
+.badge-yellow {
+  @include badge-variant($tfc-yellow);
+}
+
+.badge-green-var {
+  @include badge-variant($tfc-green-var);
+}
+
+.badge-orange {
+  @include badge-variant($tfc-orange);
+}
+
+.badge-dark-green {
+  @include badge-variant($tfc-dark-green);
+  color: $black;
+}
+
+.badge-dark-orange {
+  @include badge-variant($tfc-dark-orange);
+  color: $black;
+}
+
+.badge-dark-blue {
+  @include badge-variant($tfc-dark-blue);
+  color: $black;
+}
+
+.badge-dark-yellow {
+  @include badge-variant($tfc-dark-yellow);
+  color: $black;
+}
+
+.glossary {
+  display: flex;
+  flex-wrap: wrap;
+
+  > .badge {
+    font-family: $font-family-serif;
+    font-size: $font-size-base;
+    font-weight: $font-weight-base;
+    line-height: $line-height-base;
+    margin-left: ($spacer / 3);
+    margin-bottom: ($spacer / 4);
+    color: $black;
+    padding-top: ($spacer / 3);
+    padding-bottom: ($spacer / 3);
+    padding-left: ($spacer * 2/3);
+    padding-right: ($spacer * 2/3);
+  }
+}
