--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -552,14 +552,14 @@ footer {
 
 
 body {
-  background-image: url('/img/helpers/bg-3.png');
-  background-clip: border-box;
-  background-position: center;
-  background-attachment: scroll;
-  background-repeat: repeat;
-  background-size: auto;
-  background-origin: border-box;
-  background-position: left;
+  // background-image: url('/img/helpers/bg-3.png');
+  // background-clip: border-box;
+  // background-position: center;
+  // background-attachment: scroll;
+  // background-repeat: repeat;
+  // background-size: auto;
+  // background-origin: border-box;
+  // background-position: left;
 }
 
 body > .container, main {
