--- a/public/css/admin/admin.css
+++ b/public/css/admin/admin.css
@@ -36151,6 +36151,12 @@ input[type=color].form-control:disabled {
   transition-delay: 0s;
 }
 
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
