--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36151,3 +36151,9 @@ input[type=color].form-control:disabled {
   transition-delay: 0s;
 }
 
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
