--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -68,6 +68,8 @@ $tfc-dark-red:        rgb(255, 99, 110);
 $tfc-green-var:       rgb(189, 237, 231);
 $tfc-dark-green-var:  rgb(149, 226, 218);
 
+$green-light:    #E1F1F1 !default;
+
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $colors: map-merge(
