--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,3 +53,9 @@
 @import "layout";
 @import "filters";
 @import "bootstrap-vue";
+
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
