--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20781,7 +20781,7 @@ pre code {
 
 .form-control {
   display: block;
-  width: 100%;
+  /* width: 100%; */
   height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
