--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -460,7 +460,7 @@
 //
 
 footer {
-  margin-top: $spacer;
+  // margin-top: $spacer;
   width: 100%;
   height: 90px;
   background-color: $nav-gray;
