--- a/resources/assets/sass/_admin-variables.scss
+++ b/resources/assets/sass/_admin-variables.scss
@@ -112,6 +112,7 @@ $colors: map-merge(
     "tfc-dark-green-var":  $tfc-dark-green-var,
     "black":               $black,
     "white":               $white,
+    "green-light":               $green-light,
   ),
   $colors
 );
@@ -176,7 +177,7 @@ $yiq-text-light:            $white !default;
 
 $enable-caret:                                true !default;
 $enable-rounded:                              true !default;
-$enable-shadows:                              true !default;
+$enable-shadows:                              false !default;
 $enable-gradients:                            false !default;
 $enable-transitions:                          true !default;
 $enable-prefers-reduced-motion-media-query:   true !default;
