--- a/resources/assets/sass/_admin-variables.scss
+++ b/resources/assets/sass/_admin-variables.scss
@@ -324,6 +324,7 @@ $component-active-bg:         theme-color("primary") !default;
 $caret-width:                 .3em !default;
 
 $transition-base:             all .2s ease-in-out !default;
+$transition-base-lg:          all .8s ease-in-out !default;
 $transition-fade:             opacity .15s linear !default;
 $transition-collapse:         height .35s ease !default;
 
