--- a/public/backend/css/admin.css
+++ b/public/backend/css/admin.css
@@ -38621,6 +38621,11 @@ input[type="color"].form-control:disabled {
   background-color: #343a40;
 }
 
+:root {
+  --transparent-var: $transparent-var;
+  --transparent: $transparent;
+}
+
 body {
   max-width: 100vw;
   overflow-x: hidden;
