--- a/resources/assets/sass/_admin-variables.scss
+++ b/resources/assets/sass/_admin-variables.scss
@@ -5,6 +5,9 @@
 
 // Color system
 
+$transparent: 0.5;
+$transparent-var: 0.5;
+
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
