--- a/resources/assets/sass/admin-app.scss
+++ b/resources/assets/sass/admin-app.scss
@@ -55,6 +55,11 @@
 @import "switch";
 @import "bootstrap-vue";
 
+:root {
+  --transparent-var: $transparent-var;
+  --transparent: $transparent;
+}
+
 body {
     max-width: 100vw;
     overflow-x: hidden;
