--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -55,8 +55,16 @@
 @import "switch";
 @import "bootstrap-vue";
 
+
+html,
+:root {
+  --transparent-var: 0.4;
+  --transparent: 0.2;
+}
+
 body {
     max-width: 100vw;
     overflow-x: hidden;
     overflow-y: auto;
+
 }
