--- a/resources/assets/sass/_custom-variables.scss
+++ b/resources/assets/sass/_custom-variables.scss
@@ -2,3 +2,8 @@ $app-padding-x: $spacer * 1.618 !default;
 $app-padding-y: $spacer !default;
 
 $custom-border-radius: 20px !default;
+
+$title-shadow: $gray-400 !default;
+$title-color: lighten($gray-200, 4) !default;
+$title-color-darken: lighten($gray-200, 3) !default;
+$title-darken: lighten($dark, 3) !default;
