--- a/resources/assets/sass/mixins/_customs.scss
+++ b/resources/assets/sass/mixins/_customs.scss
@@ -1,5 +1,5 @@
 @mixin custom-box-shadow($color, $size: 4px, $opacity: .05) {
-  box-shadow: $size ($size * 2) ($size * 6) 0 rgba($color, calc($opacity * 2)), ($size * 2) ($size * 4) ($size * 12) 0 rgba($color, $opacity);
+  box-shadow: $size ($size * 2) ($size * 6) 0 rgba($color, $opacity * 2), ($size * 2) ($size * 4) ($size * 12) 0 rgba($color, $opacity);
 }
 
 @mixin custom-text-shadow($color, $size: 2px, $opacity: .05) {
