Completata la parte principale del text-editor

--- a/public/backend/css/admin.css
+++ b/public/backend/css/admin.css
@@ -16954,6 +16954,8 @@ footer.no-margin-top {
 
 .custom-input {
   position: relative;
+  height: inherit;
+  margin-bottom: 1.618rem;
 }
 
 .custom-input__label {
