--- a/resources/assets/sass/_custom-inputs.scss
+++ b/resources/assets/sass/_custom-inputs.scss
@@ -68,6 +68,8 @@ $ci-padding-top-focused: $ci-padding-top;
 // styles
 .custom-input {
     position: relative;
+    height: inherit;
+    margin-bottom: $spacer * 1.618;
 
     &__label {
         position: absolute;
