Inizio debug Dropzone

--- a/resources/assets/sass/admin-app.scss
+++ b/resources/assets/sass/admin-app.scss
@@ -54,6 +54,7 @@
 @import "filters";
 @import "switch";
 @import "bootstrap-vue";
+@import "toastr";
 
 :root {
   --transparent-var: $transparent-var;
